@@ -2,8 +2,22 @@
            i18n_domain="Five">
 
     <include package="Products.Five" file="meta.zcml" />
+    <include package="zope.annotation" />
 
     <include package="AccessControl" />
     <include package="Products.Five.utilities" file="configure.zcml" />
+
+
+    <!-- Manually register the necessary c.geo adapters -->
+    <adapter
+        for="collective.geo.geographer.interfaces.IGeoreferenceable"
+        provides="collective.geo.contentlocations.interfaces.IGeoManager"
+        factory="collective.geo.contentlocations.geomanager.GeoManager" />
+
+    <adapter
+        factory="collective.geo.geographer.geo.GeoreferencingAnnotator"
+        provides="collective.geo.geographer.interfaces.IWriteGeoreferenced"
+        trusted="true"
+        />
 
 </configure>
